[tool.poetry]
name = "api-test-o-matic"
version = "0.1.0"
description = ""
authors = ["Mike Fischer <mike@theelectricrambler.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
requests = "^2.31.0"
python-dotenv = "^1.0.1"
pyopenssl = "^24.1.0"
fastapi = "^0.110.2"
pydantic = "^2.7.1"
uuid = "^1.30"
datetime = "^5.5"
uvicorn = "^0.29.0"
psycopg2-binary = "^2.9.9"
pyyaml = "^6.0.1"
termcolor = "^2.4.0"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
